--- a/index.html
+++ b/index.html
@@ -264,6 +264,6 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://kit.fontawesome.com/33ba98c333.js" crossorigin="anonymous"></script>
     <!-- ----- MAIN JS ----- -->
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
