--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="nav-button">
            <a href="https://drive.google.com/file/d/1I8Kw6VJShPfjM7bqBVhCMT4Y_rlScBfF/view?usp=drive_lin"> <button class="btn">Download CV <i class="uil uil-file-alt"></i></button></a>
 
-           <span id="p"><img src="./assets/moon.png" alt="mode" class="moon"></span>
+           <span id="p"><img src="moon.png" alt="mode" class="moon"></span>
         </div>
         <div class="nav-menu-btn">
             <i class="uil uil-bars" onclick="myMenuFunction()"></i>
